@@ -1,5 +1,8 @@
 Revision history for Perl module Test::NoXS
 
+    - fix tests that broke when Scalar::Util stopped offering
+      XS or PP; using Class::Load instead
+
 1.01 Sun Jun  7 10:42:31 EDT 2009
     - added ':all' import argument to disable all XS loading
       (requested by Michael Schwern)
